# s3-rust-htslib-bam

./: .gitignore  Cargo.toml  Cross.toml  Makefile  README.md  cdk.json  cdk.ts  event.json  package-lock.json  package.json  samconfig.toml  template.yml  tsconfig.json
deploy/: app.py  cdk.json  lambda_test_event.json  requirements.txt
src/: errors.rs  main.rs  reader.rs
