[package]
name = "s3-htslib-bamheader"
version = "0.1.0"
authors = ["Roman Valls Guimera <brainstorm@nopcode.org>"]
edition = "2018"

[dependencies]
snafu = { version = "0.6.8" }
url = { version = "2.1.1" }
serde = "^1"
serde_derive = "^1"
serde_json = "^1"
lambda_http = { version = "0.2.0-beta.1", git = "https://github.com/awslabs/aws-lambda-rust-runtime" }
rust-htslib = { git = "https://github.com/rust-bio/rust-htslib.git", features = ["s3", "static"] }

tokio = { version = "0.2.19", features = ["full"] }
tokio-codec = "0.2.0-alpha.6"
tokio-io = "0.2.0-alpha.6"

[[ bin ]]
name = "bootstrap"
path = "src/main.rs"

#[profile.release]
#lto = true
#opt-level = 'z'
#codegen-units = 1